package org.example.drivers;

public class DatabaseReader {
    private final String table;

    public DatabaseReader(String table) {
        this.table = table;
    }

    public int fieldCount() {
        return -1 /* TODO */;
    }
}
