package org.example.models;

public enum Error {
    UNKNOWN_COMMAND_ERROR,
    NO_PERMISSION,
    FORMAT_ERROR,
    PARSE_ERROR,
    PLAYER_ALREADY_EXISTS
}
