package org.example.models;

public enum PrivilegeLevel {
    ADMIN, PLAYER, GUEST;
}
