@startuml

set separator none
skinparam backgroundcolor #FFE299
allowmixing
skinparam nodesep 60
skinparam ranksep 150

class ExitCommand
class HelpCommand
class LoginCommand
class LogoutCommand
class PlayerCreateCommand
class PlayerDeleteCommand
class StatisticsShowCommand
class TeamAddCommand
class TeamCreateCommand
class TeamDeleteCommand
class TeamRemoveCommand
class TournamentAddCommand
class TournamentCreateCommand
class TournamentDeleteCommand
class TournamentListCommand
class TournamentMatchmakingCommand
class TournamentRemoveCommand

class DatabaseReader
class DatabaseWriter
class Logger

enum Category
abstract Command
abstract Participant
class Player
enum PrivilegeLevel
class Team
class Tournament
class User

class CLI
class CommandView
enum Error
enum Message

class SportsManagementSystem

diamond commandConnector

commandConnector -up-|> Command

commandConnector -- ExitCommand
commandConnector -- HelpCommand
commandConnector -- LoginCommand
commandConnector -- LogoutCommand
commandConnector -- PlayerCreateCommand
commandConnector -- PlayerDeleteCommand
commandConnector -- StatisticsShowCommand
commandConnector -- TeamAddCommand
commandConnector -- TeamCreateCommand
commandConnector -- TeamDeleteCommand
commandConnector -- TeamRemoveCommand
commandConnector -- TournamentAddCommand
commandConnector -- TournamentCreateCommand
commandConnector -- TournamentDeleteCommand
commandConnector -- TournamentListCommand
commandConnector -- TournamentMatchmakingCommand
commandConnector -- TournamentRemoveCommand

HashMap -* CLI
CommandView --* CLI

HashMap o-up- String
HashMap o-left Command

Command <.. User

CLI -* SportsManagementSystem
CLI .> Logger

Participant <|-- Player
Participant <|-- Team

Logger <.. String

Tournament o-- Player
Tournament o-- Team

Player *-- User


diamond DatabaseReaderConnector
diamond DatabaseWriterConnector

DatabaseReaderConnector .up.> DatabaseReader
DatabaseWriterConnector .up.> DatabaseWriter

DatabaseWriterConnector -- PlayerCreateCommand
DatabaseWriterConnector -- PlayerDeleteCommand
DatabaseWriterConnector -- TeamCreateCommand
DatabaseWriterConnector -- TeamDeleteCommand
DatabaseWriterConnector -- TournamentCreateCommand
DatabaseWriterConnector -- TournamentDeleteCommand
DatabaseReaderConnector -- TournamentListCommand
DatabaseReaderConnector -- StatisticsShowCommand

@enduml